--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.sh
+notes.txt
 # Local .terraform directories
 **/.terraform/*
 
@@ -14,6 +16,7 @@ crash.log
 # to change depending on the environment.
 #
 *.tfvars
+!/environments/*.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
