--- a/.github/workflows/live.yaml
+++ b/.github/workflows/live.yaml
@@ -9,8 +9,8 @@ jobs:
   parse:
     if: ${{ !github.event.issue.pull_request && github.event.comment.body == '/approve' }}
     runs-on: ubuntu-20.04
-    #outputs:
-    #  test: ${{ fromJSON(steps.issue_body_parser.outputs.metadata) }}
+    outputs:
+      output: ${{ steps.issue_body_parser.outputs }}
     #  deploy-environment: ${{ fromJSON(steps.issue_body_parser.outputs.payload).environment }}
     #  ci-run-number: ${{ fromJSON(steps.issue_body_parser.outputs.payload).runNumber }}
     steps:
@@ -27,4 +27,3 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           issue_id: ${{ github.event.issue.number }}         
           payload: yaml
-          
