--- a/.github/workflows/stage.yaml
+++ b/.github/workflows/stage.yaml
@@ -35,11 +35,24 @@ jobs:
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.0
         with:
-          dry_run: true
+          #dry_run: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
           release_branches: main
           create_annotated_tag: true
-          custom_release_rules: hotfix:patch:Fix,fix:patch:Fix,patch:patch:Fix,bug:patch:Fix,security:patch:Security,feat:minor:Feature,feature:minor:Feature,minor:minor:Feature,breaking:major:BREAKING,break:major:BREAKING,major:major:BREAKING,stable:major:BREAKING,release:major:BREAKING
+          custom_release_rules: >
+            hotfix:patch:Fix,
+            fix:patch:Fix,
+            patch:patch:Fix,
+            bug:patch:Fix,
+            security:patch:Security,
+            feat:minor:Feature,
+            feature:minor:Feature,
+            minor:minor:Feature,
+            breaking:major:BREAKING,
+            break:major:BREAKING,
+            major:major:BREAKING,
+            stable:major:BREAKING,
+            release:major:BREAKING
 
       - name: Create issue for approval
         id: create_issue
