--- a/.github/workflows/live.yaml
+++ b/.github/workflows/live.yaml
@@ -10,7 +10,7 @@ jobs:
     if: ${{ !github.event.issue.pull_request && github.event.comment.body == '/approve' }}
     runs-on: ubuntu-20.04
     outputs:
-      output: ${{ toJSON(steps.issue_body_parser.outputs).tag }}
+      output: ${{ steps.issue_body_parser.outputs.payload }}
     #  deploy-environment: ${{ fromJSON(steps.issue_body_parser.outputs.payload).environment }}
     #  ci-run-number: ${{ fromJSON(steps.issue_body_parser.outputs.payload).runNumber }}
     steps:
@@ -27,3 +27,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           issue_id: ${{ github.event.issue.number }}         
           payload: yaml
+
+      - name: Test
+        run: echo ${{ outputs.output }}
