--- a/.github/workflows/live.yaml
+++ b/.github/workflows/live.yaml
@@ -29,4 +29,4 @@ jobs:
           payload: yaml
 
       - name: Test
-        run: echo ${{ outputs.output }}
+        run: echo ${{ needs.parse.outputs.output }}
