--- a/.github/workflows/live.yaml
+++ b/.github/workflows/live.yaml
@@ -9,7 +9,8 @@ jobs:
   parse:
     if: ${{ !github.event.issue.pull_request && github.event.comment.body == '/approve' }}
     runs-on: ubuntu-20.04
-    #outputs:
+    outputs:
+      test: ${{ steps.issue_body_parser.outputs.payload.tag }}
     #  deploy-environment: ${{ fromJSON(steps.issue_body_parser.outputs.payload).environment }}
     #  ci-run-number: ${{ fromJSON(steps.issue_body_parser.outputs.payload).runNumber }}
     steps:
@@ -26,3 +27,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           issue_id: ${{ github.event.issue.number }}         
           payload: yaml
+
+      - run: echo ${{ needs.parse.outputs.test }}
