--- a/.github/workflows/live.yaml
+++ b/.github/workflows/live.yaml
@@ -9,8 +9,8 @@ jobs:
   parse:
     if: ${{ !github.event.issue.pull_request && github.event.comment.body == '/approve' }}
     runs-on: ubuntu-20.04
-    outputs:
-      test: ${{ steps.issue_body_parser.outputs.payload.tag }}
+    #outputs:
+    #  tag: ${{ fromJSON(steps.issue_body_parser.outputs.payload).tag }}
     #  deploy-environment: ${{ fromJSON(steps.issue_body_parser.outputs.payload).environment }}
     #  ci-run-number: ${{ fromJSON(steps.issue_body_parser.outputs.payload).runNumber }}
     steps:
@@ -28,4 +28,4 @@ jobs:
           issue_id: ${{ github.event.issue.number }}         
           payload: yaml
 
-      - run: echo ${{ needs.parse.outputs.test }}
+      - run: "echo TAG: ${{ fromJSON(steps.issue_body_parser.outputs.payload).tag }}"
